[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-code-reviewer"
version = "1.0.0"
description = "AI-powered code reviewer for automated suggestions and bug detection."
license = {text = "MIT"}
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
ai-code-reviewer = "ai_code_reviewer.main:cli"

[tool.setuptools.packages.find]
include = ["ai_code_reviewer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
